fix button:active on iphone

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -24,7 +24,7 @@
 }
 
 .Button.normal:active {
-  opacity: 80%;
+  background-color: rgb(233, 130, 142);
 }
 
 .Button.light{
